--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .content{
     display: grid;
     grid: repeat(12,1fr)/repeat(12,1fr);
@@ -22,11 +25,20 @@
     gap: 12%;
     background-color: white;
 }
-.playerScore{
+.playerScoreBoard{
     grid-column: 2/4;
+    grid-row:1/13 ;
+    display: flex;
+    flex-direction: column;
+    flex-direction: column;
+    align-items: center;
 }
-.computerScore{
-    grid-column: 10/12;
+.computerScoreBoard{
+    grid-column: 9/13;
+    grid-row:1/13 ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .card{
     height:100px ;
@@ -44,4 +56,44 @@
     margin-left:150%;
     width: 105%;
     border-radius:8px ;
+}
+.player,.computer{
+    opacity: 0;
+    transform: scale(0);
+}
+.player.animation{
+    animation: animation 1s ease-in forwards;
+}
+.computer.animation{
+    animation: animation 1s ease-in forwards;
+}
+@keyframes animation {
+    0%{
+        opacity: 0;
+        transform: scale(0);
+    }
+    50%{
+        opacity: 1;
+        transform: scale(0.5);
+    }
+    75%{
+        opacity: 1;
+        transform: scale(2);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+@keyframes animation2 {
+     0%{
+        opacity: 0;
+    }
+    /* 50%{
+        opacity: 0;
+
+    } */
+    100%{
+        opacity: 1;
+    }
 }
