--- a/style.css
+++ b/style.css
@@ -1,29 +1,31 @@
 body{
     margin: 0px;
+    height: 100vh;
+    overflow: hidden;
 }
 .content{
     display: grid;
     grid: repeat(12,1fr)/repeat(12,1fr);
-    height: 100vh;
     row-gap: 12%;
     margin: 0px;
-    background-color: white;
+    background-color: #E5E5E5;
 }
 .header{
     margin-top: 2%;
     margin-left:40%;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 25px;
 }
 .gameBoard{
     grid-column: 5/8;
-    grid-row: 2/6;
+    grid-row: 1/6;
     display: grid;
     grid: repeat(12,1fr)/repeat(3,1fr);
     height: 400px;
     width: 400px;
     gap: 12%;
-    background-color: white;
+    background-color:#E5E5E5;
+    margin-top: 4%;
 }
 .playerScoreBoard{
     grid-column: 2/4;
@@ -55,7 +57,12 @@ body{
     grid-row: 4/6;
     margin-left:150%;
     width: 105%;
-    border-radius:8px ;
+    border-radius:8px;
+    background-color:rgb(94, 87, 192);
+    font-weight: bold;
+    font-size: 15px;
+    border-radius:15px ;
+    border: solid black;
 }
 .player,.computer{
     opacity: 0;
